Refactor: make persistence writes completion-aware
Tests: commit/failure completion, draining close, and post-drain rejection passed.